--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A définir</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Combo&family=Luckiest+Guy&family=Poiret+One&family=Poppins:wght@500&family=Rock+Salt&display=swap"
       rel="stylesheet"
     />
   </head>
