--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A définir</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Combo&family=Luckiest+Guy&family=Poiret+One&family=Poppins:wght@500&family=Rock+Salt&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Combo&family=Luckiest+Guy&family=Poiret+One&family=Poppins:wght@500&family=Rock+Salt&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
   </head>
